[package]
name = "async-fetch"
description = "Asynchronous HTTP client."
license = "MIT"
version = "0.1.1"
authors = ["Kristijan Sedlak <xpepermint@gmail.com>"]
edition = "2018"
documentation = "https://github.com/xpepermint/async-fetch"
homepage = "https://github.com/xpepermint/async-fetch"
repository = "https://github.com/xpepermint/async-fetch"
readme = "README.md"

[dependencies]
async-std = "^1.5.0"
async-uninet = "^0.1.1"
async-httplib = "^0.2.0"
async-native-tls = "^0.3.3"
url = "^2.1.1" 

[dev-dependencies]
async-std = { version = "^1.5.0", features = ["attributes"] }
